--- a/API/style.css
+++ b/API/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-    font-size: 16px;
+    font-size: 12px;
     --cream: #dcd3d3;
     --white: #ffffff;
     --blue: #585fe3;
@@ -65,12 +65,13 @@ label {
 #usersContainer {
     display: grid;
     grid-template-columns: repeat(7,1fr);
-    gap: 32px;
+    gap: 16px;
+    justify-items: center;    
 }
 
 .userContainer {
-    max-width: 120px;
-    max-height: 220px;
+    min-width: 140px;
+    height: auto;
     padding: 4px;
     border-radius: 8px;
     background-color: var(--white);
@@ -78,13 +79,14 @@ label {
 }
 
 .userName {
-    margin: 24px 0;
+    margin: 8px 0;
 }
 
 .imageContainer {
     width: 100%;
-    aspect-ratio: 1/1;
-    border-radius: 16px;
+    height: 100px;
+    /* aspect-ratio: 1/1; */
+    border-radius: 8px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
